# cam-professional

backend/: Cargo.toml
backend/src/: main.rs
backend/src/context/: context.rs  mod.rs
backend/src/db/: db_connection.rs  mod.rs
backend/src/graphql/: mod.rs  mutation_root.rs  query_root.rs
backend/src/middlewares/: auth_middleware.rs
backend/src/models/: category.rs  user.rs
backend/src/routes/: user.rs
backend/src/types/: category_type.rs  mod.rs  user_type.rs
backend/src/utils/: auth.rs  handler.rs  mod.rs  responder.rs
client/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json
client/data/: Lates-product.tsx  News.tsx  db.json
client/public/images/: mono-300x300.avif
client/public/products/: product-2.avif  product-3.avif  product-4.avif
client/src/: App.tsx  index.css  index.tsx
client/src/components/: Cards.tsx  Core-card.tsx  CoreProductCard.tsx  Footer.tsx  Image.tsx  Latest-cart.tsx  LoatAnimation.tsx  Member-cart.tsx  Navbar.tsx  News-card.tsx
client/src/components/cards/: Cards.tsx  Member-cart.tsx  NewsCard.tsx  RelatedCard.tsx
client/src/components/core-product/: CoreProduct.tsx  CoreProducts.tsx
client/src/components/latest-product/: LatestProducts.tsx
client/src/components/layouts/: Footer.tsx  Navbar.tsx
client/src/context/: Cart-context.tsx  CartContext.tsx  Test-context.tsx
client/src/data/: Core-Product.tsx  Lates-product.tsx  Members.tsx
client/src/pages/: About.tsx  Cart.tsx  Contact.tsx  Home.tsx  ProductDetail.tsx  about.tsx  cart.tsx  contact.tsx  home.tsx  product-details.tsx
(+10 files in other folders)
